Nombre y carnet quemados en frontend

--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
   <div class="container">
     <a routerLink="/" class="logo">Food Mine!</a>
+    <a>Jonathan Joel Guamuch Morales 7590-22-306</a>
     <nav>
       <ul>
         <li *ngIf="!isAuth">
